--- a/backend/package.json
+++ b/backend/package.json
@@ -12,19 +12,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "body-parser":"^1.20.3",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "drizzle-orm": "^0.39.3",
+    "express": "^4.21.2",
+    "postgres": "^3.4.5"
   },
   "devDependencies": {
-    "@types/bodyparser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
+    "drizzle-kit": "^0.30.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
