--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,6 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "src/services/supabaseclient.js"],
     "exclude": ["node_modules"]
   }
