--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "@types/pg": "^8.11.11",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -20,13 +21,14 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "express": "^4.21.2",
+    "pg": "^8.13.3",
     "postgres": "^3.4.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.13.5",
     "drizzle-kit": "^0.30.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
