--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "react-draggable": "^4.4.6"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.306"
+    "@types/chrome": "^0.0.306",
+    "@types/crypto-js": "^4.2.2"
   }
 }
